<resources>
    <string name="app_name">ইসলামিক দান-ছদকা করার নিয়ম</string>

    <string name="button1">দান-ছাদকা করার ফযীলত</string>
    <string name="button2">কাদেরকে দান করব?</string>
    <string name="button3">কী পরিমান দান করা যায়?</string>
    <string name="button4">আয়াত সমূহের উদাহরণ</string>
    <string name="button3Text">তবে এমন দান করা উচিৎ নয় যে, নিজের ওয়ারিসগণ সম্পদ থেকে বঞ্ছিত হয়ে হয় বা তাদের অধিকার খর্ব হয়। এ ক্ষেত্রে ইসলাম একটি পরিমান নির্দিষ্ট করে দিয়েছে।\n আর তা হর, সর্বোচ্চ এক তৃতীয়াংশ। এর চেয়ে বেশি দান করা জায়েয নাই। রবং কম হলেই ভালো। দেখুন নিম্নোক্ত হাদীসদ্বয়:</string>
    <string name="button3Text1">🔸 সা’দ বিন আবী ওয়াক্কাস রা. হতে বর্ণিত, তিনি বলেন, আমি বিদায় হজ্জের সময় রাসূল সাল্লাল্লাহু আলাইহি ওয়া সল্লামের সাথে ছিলাম। পথিমধ্যে আমি প্রচণ্ড রোগে আক্রান্ত হলাম। \nনবী সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম আমার সেবা-শুশ্রূষা করতে এলে আমি তাঁকে বললাম, হে আল্লাহর রাসূল, আমার অনেক সম্পত্তি। কিন্তু আমার ওয়ারিস হওয়ার মত কেউ নাই একজন মাত্র মেয়ে ছাড়া। আমি আমার সম্পত্তির তিন ভাগের দুই ভাগ ওসিয়ত করব? তিনি বললেন: না। \nআমি বললাম: অর্ধেক? তিনি বললেন: না। আমি বললাম, তবে তিন ভাগের একভাগ? তিনি বললেন: “তিন ভাগের একভাগ। তিন ভাগের একভাগই তো বেশি। সাদ, তোমার উত্তরাধিকারীদেরকে দরিদ্র অবস্থায় রেখে যাবে আর তারা মানুষের কাছে হাত পেতে ভিক্ষা করে বেড়াবে এর চেয়ে তাদেরকে সম্পদশালী করে রেখে যাওয়াই উত্তম। “[বুখারী ও মুসলিম]</string>


    <string-array name="list">
        <item> [সূরা বাকারা : আয়াত ১৭৭]</item>
        <item>[সূরা বাকারা : আয়াত ২১৫]</item>
        <item> [সূরা বাকারা : আয়াত ২৪৫]</item>
        <item>[সূরা বাকারা : আয়াত ২৪৭]</item>
        <item> [সূরা বাকারা : আয়াত ২৫৪]</item>
        <item> [সূরা বাকারা : আয়াত ২৬১]</item>
        <item> [সূরা নাহ্ল : আয়াত ৯৭]</item>
        <item> [সূরা হাদীদ : আয়াত ১৮]</item>
        <item>[সূরা মুয্যম্মিল : আয়াত ২০]</item>
        <item>[সূরা আলে- ইমরান : আয়াত ৯২]</item>
        <item>[সূরা মুহাম্মদ : আয়াত ৩৬-৩৮]</item>
        <item>[সূরা হাশর : আয়াত ৭]</item>
    </string-array>
    <string name="answer1">অর্থ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sura177">সৎকর্ম শুধু এই নয় যে,পূর্ব কিংবা পশ্চিমদিকে মুখ করবে, বরং বড় সৎকাজ হল এই যে, ঈমান আনবে আল্লাহর উপর কিয়ামত দিবসের উপর, ফেরেশতাদের উপর এবং সমস্ত নবী-রসূলগণে র উপর, আর সম্পদ ব্যয় করবে তাঁরই মহব্বতে আত্নীয়-স্ব জন, এতীম-মিসকীন , মুসাফির-ভিক ্ষুক ও মুক্তিকামী ক্রীতদাসদের জন্যে। আর যারা নামায প্রতিষ্ঠা করে, যাকাত দান করে এবং যারা কৃত প্রতিজ্ঞা সম্পাদনকারী এবং অভাবে, রোগে-শোকে ও যুদ্ধের সময় ধৈর্য্য ধারণকারী তারাই হল সত্যাশ্রয়ী, আর তারাই পরহেযগার। </string>
    <string name="sura215">তোমার কাছে জিজ্ঞেস করে, কি তারা ব্যয় করবে? বলে দাও-যে বস্তুই তোমরা ব্যয় কর, তা হবে পিতা-মাতার জন্যে, আত্নীয়-আপন জনের জন্যে, এতীম-অনাথদে র জন্যে, অসহায়দের জন্যে এবং মুসাফিরদের জন্যে। আর তোমরা যে কোন সৎকাজ করবে, নিঃসন্দেহে তা অত্যন্ত ভালভাবেই আল্লাহর জানা রয়েছে।</string>
    <string name="sura245">এমন কে আছে যে, আল্লাহকে করজ দেবে, উত্তম করজ; অতঃপর আল্লাহ তাকে দ্বিগুণ-বহু গুণ বৃদ্ধি করে দিবেন। আল্লাহই সংকোচিত করেন এবং তিনিই প্রশস্ততা দান করেন এবং তাঁরই নিকট তোমরা সবাই ফিরে যাবে। </string>
    <string name="sura247"> আর তাদেরকে তাদের নবী বললেন, নিশ্চয়ই আল্লাহ তালূতকে তোমাদের জন্য বাদশাহ সাব্যস্ত করেছেন। তারা বলতে লাগল তা কেমন করে হয় যে, তার শাসন চলবে আমাদের উপর। অথচ রাষ্ট্রক্ষমতা পাওয়ার ক্ষেত্রে তার চেয়ে আমাদেরই অধিকার বেশী। আর সে সম্পদের দিক দিয়েও সচ্ছল নয়। নবী বললেন, নিশ্চয় আল্লাহ তোমাদের উপর তাকে পছন্দ করেছেন এবং স্বাস্থ্য ও জ্ঞানের দিক দিয়ে প্রাচুর্য দান করেছেন। বস্তুতঃ আল্লাহ তাকেই রাজ্য দান করেন, যাকে ইচ্ছা। আর আল্লাহ হলেন অনুগ্রহ দানকারী এবং সব বিষয়ে অবগত।</string>
    <string name="sura254">হে ঈমানদারগণ! আমি তোমাদেরকে যে রুযী দিয়েছি, সেদিন আসার পূর্বেই তোমরা তা থেকে ব্যয় কর, যাতে না আছে বেচা-কেনা, না আছে সুপারিশ কিংবা বন্ধুত্ব। আর কাফেররাই হলো প্রকৃত যালেম। </string>
    <string name="sura261">যারা আল্লাহর রাস্তায় স্বীয় ধন সম্পদ ব্যয় করে, তাদের উদাহরণ একটি বীজের মত, যা থেকে সাতটি শীষ জন্মায়। প্রত্যেকটি শীষে একশ করে দানা থাকে। আল্লাহ অতি দানশীল, সর্বজ্ঞ।</string>
    <string name="sura97"> মুমিন হয়ে পুরুষ ও নারী যে কেউ সৎ কাজ করবে এবং ঈমান আনবে,অবশ্যই তাকে আমি নতুন জীবন দান করব,যে জীবন হবে ভাল ও পবিত্র এবং তাদের কাজ অনুযায়ী তাদের আমি শ্রেষ্ঠ পুরস্কার দান করব। </string>
    <string name="sura18">দানশীল পুরুষগণ ও দানশীল নারীগণ এবং যারা আল্লাহকে উত্তম ঋণ দান করে তাদেরকে দেওয়া হবে বহু গুণ বেশী এবং তাদের জন্য রয়েছে সম্মানজনক পুরস্কার। </string>
    <string name="sura20">তোমার প্রতিপালক তো জানেন যে, তুমি জাগরণ কর কখনও রাত্রির প্রায় দুই-তৃতীয়াংশ, কখনও অর্ধাংশ এবং কখনও এক-তৃতীয়াংশ জাগে এবং তোমার সংগে যারা আছে তাদের একটি দলও, এবং আল্লাহই নির্ধারণ করেন দিবস ও রাত্রির পরিমাণ। তিনি জানেন যে, তোমরা তা পরিপূর্ণ পালন করতে পারবে না। অতএব আল্লাহ তোমাদের প্রতি ক্ষমাপরবশ হয়েছেন। কাজেই কুরআনের যতটুকু আবৃত্তি করা তোমাদের জন্য সহজ, ততটুকু আবৃত্তি কর, আল্লাহ জানেন যে, তোমাদের মধ্যে কেউ কেউ অসুস্থ হয়ে পড়বে, কেউ কেউ আল্লাহর অনুগ্রহ সন্ধানে দেশ ভ্রমণ করবে এবং কেউ কেউ আল্লাহর পথে সংগ্রামে লিপ্ত হবে। কাজের তোমরা কুরআন হইতে যতটুকু সহজসাধ্য আবৃত্তি কর। অতএব সালাত কায়েম কর, যাকাত প্রদান কর, এবং আল্লাহকে দাও উত্তম ঋণ। তোমরা তোমাদের নিজেদের মঙ্গলের জন্য ভাল যা কিছু অগ্রিম প্রেরণ করবে তোমরা তা পাবে আল্লাহর নিকট। উহা উৎকৃষ্টতর এবং পুরস্কার হিসাবে মহত্তর। আর তোমরা ক্ষমা প্রার্থনা কর আল্লাহর নিকট, নিশ্চয়ই আল্লাহ ক্ষমাশীল, পরম দয়ালু।  </string>
    <string name="sura92">তোমরা যা ভালবাস তা হতে ব্যয় না করা পর্যন্ত তোমরা কখনও পুণ্য লাভ করবে না। তোমরা যা কিছু ব্যয় কর আল্লাহ অবশ্যই সে সম্বন্ধে অবহিত।</string>
    <string name="sura36_38">যপার্থিব জীবন তো কেবল ক্রীড়া-কৌতুক, যদি তোমরা ঈমান আন, তাকওয়া অবলম্বন কর, আল্লাহ তোমাদেরকে তোমাদের পুরস্কার দিবেন এবং তিনি তোমাদের ধন- সম্পদ চান না। তোমাদের নিকট হতে তিনি তা চাইলে ও তজ্জন্য তোমাদের উপর চাপ দিলে তোমরা তো কার্পণ্য করবে এবং তখন তিনি তোমাদের বিদ্বেষভাব প্রকাশ করে দিবেন।  দেখ, তোমরাই তো তারা যাদেরকে আল্লাহর পথে ব্যয় করতে বলা হয়েছে অথচ তোমাদের অনেকে কৃপণতা করতেছে। যারা কার্পণ্য করে তারা তো কার্পণ্য করে নিজেদেরই প্রতি। আল্লাহ অভাবমুক্ত এবং তোমরা অভাবগ্রস্ত। যদি তোমরা বিমুখ হও, তিনি অন্য জাতিকে তোমাদের স্থলবর্তী করবেন, তারা তোমাদের মত হবে না। </string>
    <string name="sura7">আল্লাহ জনপদবাসীদের নিকট হতে তাঁর রাসূলকে যা কিছু দিয়েছেন তা আল্লাহর, তাঁর রাসূলের, রাসূলের স্বজনগণের, ইয়াতীমদের, অভাবগ্রস্ত ও পথচারীদের, যাতে তোমাদের মধ্যে যারা বিত্তবান কেবল তাদের মধ্যেই ঐশ্বর্য আবর্তন না করে। রাসূল তোমাদেরকে যা দেয় তা তোমরা গ্রহণ কর এবং যা হতে তোমাদেরকে নিষেধ করে তা হতে বিরত থাক এবং তোমরা আল্লাহকে ভয় কর, আল্লাহ তো শাস্তি দানে কঠোর।  </string>


    <string name="sura177_arbi">لَّيْسَ الْبِرَّ أَن تُوَلُّواْ وُجُوهَكُمْ قِبَلَ الْمَشْرِقِ وَالْمَغْرِبِ وَلَـكِنَّ الْبِرَّ مَنْ آمَنَ بِاللّهِ وَالْيَوْمِ الآخِرِ وَالْمَلآئِكَةِ وَالْكِتَابِ وَالنَّبِيِّينَ وَآتَى الْمَالَ عَلَى حُبِّهِ ذَوِي الْقُرْبَى وَالْيَتَامَى وَالْمَسَاكِينَ وَابْنَ السَّبِيلِ وَالسَّآئِلِينَ وَفِي الرِّقَابِ وَأَقَامَ الصَّلاةَ وَآتَى الزَّكَاةَ وَالْمُوفُونَ بِعَهْدِهِمْ إِذَا عَاهَدُواْ وَالصَّابِرِينَ فِي الْبَأْسَاء والضَّرَّاء وَحِينَ الْبَأْسِ أُولَـئِكَ الَّذِينَ صَدَقُوا وَأُولَـئِكَ هُمُ الْمُتَّقُونَ</string>
    <string name="sura215_arbi">يَسْأَلُونَكَ مَاذَا يُنفِقُونَ قُلْ مَا أَنفَقْتُم مِّنْ خَيْرٍ فَلِلْوَالِدَيْنِ وَالأَقْرَبِينَ وَالْيَتَامَى وَالْمَسَاكِينِ وَابْنِ السَّبِيلِ وَمَا تَفْعَلُواْ مِنْ خَيْرٍ فَإِنَّ اللّهَ بِهِ عَلِيمٌ</string>
    <string name="sura245_arbi">مَّن ذَا الَّذِي يُقْرِضُ اللّهَ قَرْضًا حَسَنًا فَيُضَاعِفَهُ لَهُ أَضْعَافًا كَثِيرَةً وَاللّهُ يَقْبِضُ وَيَبْسُطُ وَإِلَيْهِ تُرْجَعُونَ</string>
    <string name="sura247_arbi">وَقَالَ لَهُمْ نَبِيُّهُمْ إِنَّ اللّهَ قَدْ بَعَثَ لَكُمْ طَالُوتَ مَلِكًا قَالُوَاْ أَنَّى يَكُونُ لَهُ الْمُلْكُ عَلَيْنَا وَنَحْنُ أَحَقُّ بِالْمُلْكِ مِنْهُ وَلَمْ يُؤْتَ سَعَةً مِّنَ الْمَالِ قَالَ إِنَّ اللّهَ اصْطَفَاهُ عَلَيْكُمْ وَزَادَهُ بَسْطَةً فِي الْعِلْمِ وَالْجِسْمِ وَاللّهُ يُؤْتِي مُلْكَهُ مَن يَشَاء وَاللّهُ وَاسِعٌ عَلِيمٌ</string>
    <string name="sura261_arbi">مَّثَلُ الَّذِينَ يُنفِقُونَ أَمْوَالَهُمْ فِي سَبِيلِ اللّهِ كَمَثَلِ حَبَّةٍ أَنبَتَتْ سَبْعَ سَنَابِلَ فِي كُلِّ سُنبُلَةٍ مِّئَةُ حَبَّةٍ وَاللّهُ يُضَاعِفُ لِمَن يَشَاء وَاللّهُ وَاسِعٌ عَلِيمٌ</string>
    <string name="sura254_arbi">يَا أَيُّهَا الَّذِينَ آمَنُواْ أَنفِقُواْ مِمَّا رَزَقْنَاكُم مِّن قَبْلِ أَن يَأْتِيَ يَوْمٌ لاَّ بَيْعٌ فِيهِ وَلاَ خُلَّةٌ وَلاَ شَفَاعَةٌ وَالْكَافِرُونَ هُمُ الظَّالِمُونَ</string>
    <string name="sura97_arbi">مَنْ عَمِلَ صَالِحًا مِنْ ذَكَرٍ أَوْ أُنْثَى وَهُوَ مُؤْمِنٌ فَلَنُحْيِيَنَّهُ حَيَاةً طَيِّبَةً وَلَنَجْزِيَنَّهُمْ أَجْرَهُمْ بِأَحْسَنِ مَا كَانُوا يَعْمَلُونَ</string>
    <string name="sura18_arbi">إِنَّ ٱلْمُصَّدِّقِينَ وَٱلْمُصَّدِّقَٰتِ وَأَقْرَضُوا۟ ٱللَّهَ قَرْضًا حَسَنًا يُضَٰعَفُ لَهُمْ وَلَهُمْ أَجْرٌ كَرِيمٌ </string>
    <string name="sura20_arbi">إِنَّ رَبَّكَ يَعْلَمُ أَنَّكَ تَقُومُ أَدْنَى مِن ثُلُثَيِ اللَّيْلِ وَنِصْفَهُ وَثُلُثَهُ وَطَائِفَةٌ مِّنَ الَّذِينَ مَعَكَ وَاللَّهُ يُقَدِّرُ اللَّيْلَ وَالنَّهَارَ عَلِمَ أَن لَّن تُحْصُوهُ فَتَابَ عَلَيْكُمْ فَاقْرَؤُوا مَا تَيَسَّرَ مِنَ الْقُرْآنِ عَلِمَ أَن سَيَكُونُ مِنكُم مَّرْضَى وَآخَرُونَ يَضْرِبُونَ فِي الْأَرْضِ يَبْتَغُونَ مِن فَضْلِ اللَّهِ وَآخَرُونَ يُقَاتِلُونَ فِي سَبِيلِ اللَّهِ فَاقْرَؤُوا مَا تَيَسَّرَ مِنْهُ وَأَقِيمُوا الصَّلَاةَ وَآتُوا الزَّكَاةَ وَأَقْرِضُوا اللَّهَ قَرْضًا حَسَنًا وَمَا تُقَدِّمُوا لِأَنفُسِكُم مِّنْ خَيْرٍ تَجِدُوهُ عِندَ اللَّهِ هُوَ خَيْرًا وَأَعْظَمَ أَجْرًا وَاسْتَغْفِرُوا اللَّهَ إِنَّ اللَّهَ غَفُورٌ رَّحِيمٌ</string>
    <string name="sura92_arbi">لَنْ تَنَالُوا الْبِرَّ حَتَّى تُنْفِقُوا مِمَّا تُحِبُّونَ وَمَا تُنْفِقُوا مِنْ شَيْءٍ فَإِنَّ اللَّهَ بِهِ عَلِيمٌ</string>
    <string name="sura36_38_arbi">اِنَّمَا الْحَیٰوةُ الدُّنْیَا لَعِبٌ وَّ لَهْوٌؕ-وَ اِنْ تُؤْمِنُوْا وَ تَتَّقُوْا یُؤْتِكُمْ اُجُوْرَكُمْ وَ لَا یَسْــٴَـلْكُمْ اَمْوَالَكُمْ(۳۶)ٌ اِنْ یَّسْــٴَـلْكُمُوْهَا فَیُحْفِكُمْ تَبْخَلُوْا وَ یُخْرِ جْ اَضْغَانَكُمْ(۳۷)هٰۤاَنْتُمْ هٰۤؤُلَآءِ تُدْعَوْنَ لِتُنْفِقُوْا فِیْ سَبِیْلِ اللّٰهِۚ-فَمِنْكُمْ مَّنْ یَّبْخَلُۚ-وَ مَنْ یَّبْخَلْ فَاِنَّمَا یَبْخَلُ عَنْ نَّفْسِهٖؕ-وَ اللّٰهُ الْغَنِیُّ وَ اَنْتُمُ الْفُقَرَآءُۚ-وَ اِنْ تَتَوَلَّوْا یَسْتَبْدِلْ قَوْمًا غَیْرَكُمْۙ-ثُمَّ لَا یَكُوْنُوْۤا اَمْثَالَكُمْ۠(۳۸)</string>
    <string name="sura7_arbi">مَّا أَفَاء اللَّهُ عَلَى رَسُولِهِ مِنْ أَهْلِ الْقُرَى فَلِلَّهِ وَلِلرَّسُولِ وَلِذِي الْقُرْبَى وَالْيَتَامَى وَالْمَسَاكِينِ وَابْنِ السَّبِيلِ كَيْ لَا يَكُونَ دُولَةً بَيْنَ الْأَغْنِيَاء مِنكُمْ وَمَا آتَاكُمُ الرَّسُولُ فَخُذُوهُ وَمَا نَهَاكُمْ عَنْهُ فَانتَهُوا وَاتَّقُوا اللَّهَ إِنَّ اللَّهَ شَدِيدُ الْعِقَابِ</string>
</resources>
