<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE6D7"
    android:padding="8dp"
    tools:context=".activity.Button3Activity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/btn3"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/button_pressed"

            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=" Back"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/button_pressed"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="কীপরিমানদানকরাযায়?"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/raabbana1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.codesgood.views.JustifiedTextView

                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/button3"
                android:textColor="@color/colorAccent"
                android:textIsSelectable="true"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="আল্লাহ তাআলা যাকে অর্থ-সম্পদ দান করেছেন সে যত বেশি আল্লাহর সন্তুষ্টির উদ্দেশ্যে গরীব-অসহায় মানুষ, জন কল্যাণকর কাজ অথবা দ্বীনের সেবায় অর্থ দান করবেন আল্লাহ তাআলা তাকে তত বেশি সওয়াব দান করবেন। "
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/button3Text"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/button3Text1"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView6"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="🔸তবে এক তৃতীয়াংশের চেয়ে কম করা উত্তম। কেননা, ইবনে আব্বাস রা. বলেন:"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="لَوْ غَضَّ النَّاسُ إِلَى الرُّبْعِ ، لأَنَّ رَسُولَ اللَّهِ – صلى الله عليه وسلم – قَالَ « الثُّلُثُ ، وَالثُّلُثُ كَثِيرٌ أَوْ كَبِيرٌ »ٌ"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="80dp"
                android:text="“মানুষ যদি (সম্পত্তি ওসিয়ত করার ক্ষেত্রে) এক তৃতীয়াংশ থেকে এক চর্তুথাংশে নেমে আসত তবে উত্তম হত। কেননা, রাসূল সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম বলেছেন, “তিন ভাগের একভাগ। তিন ভাগের একভাগই তো বেশি।  (বুখারী ও মুসলিম)
                আল্লাহু আলাম।"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>